--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
 
         <div id="Network" class="artboard p-4 bg-base-300 my-4 rounded rounded-lg shadow-md md:shadow-2xl">
             <h2 class="text-primary">Network</h2>
-            <div id="Network-data"> #id to be used 
+            <div id="Network-data"> #id to be used in the add.py
                 <div class="text-center loader">
                     <span class="loading loading-spinner loading-lg"></span>
                 </div>
