--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>MonitorMind - System Monitoring Dashboard</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/daisyui.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <!-- Add other necessary head elements here -->
+    <!-- Add another necessary head element here -->
 </head>
 <body>
 <div class="container mx-auto py-2 px-4 md:px-0">
